Switch googletest from fplutil snapshot to upstream googletest repo.

--- a/.gitmodules
+++ b/.gitmodules
@@ -28,9 +28,9 @@
 [submodule "dependencies/fplutil"]
 	path = dependencies/fplutil
 	url = http://github.com/google/fplutil.git
-[submodule "dependencies/googletest"]
-	path = dependencies/googletest
-	url = http://github.com/google/fplutil.git
 [submodule "dependencies/flatbuffers"]
 	path = dependencies/flatbuffers
 	url = http://github.com/google/flatbuffers.git
+[submodule "dependencies/googletest"]
+	path = dependencies/googletest
+	url = http://github.com/google/googletest.git
