Add motive to flatui disttool dependencies.
PiperOrigin-RevId: 149365787
Change-Id: I107fb602968341eb61b1499852f1fb7f1e2fb130

--- a/disttools/config.json
+++ b/disttools/config.json
@@ -26,6 +26,15 @@
       "fetch_dependencies": 1
     },
     {
+      "name": "motive",
+      "url": "http://github.com/google/motive.git",
+      "branch": "develop",
+      "is_library": 1,
+      "third_party": 0,
+      "push": 0,
+      "fetch_dependencies": 1
+    },
+    {
       "name": "fplbase",
       "url": "http://github.com/google/fplbase.git",
       "branch": "develop",
