Fixed a bad reference to fplbase from flatui.
PiperOrigin-RevId: 150942672
Change-Id: Ib9787b0607c7870f073f8c0fba6791d19bfddd0b

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -113,7 +113,7 @@ if(NOT TARGET hyphenation_patterns)
 endif()
 if(flatui_build_tests OR flatui_build_samples)
 # Add FPLbase
-add_subdirectory("${fpl_root}/fplbase" ${tmp_dir}/fplbase)
+add_subdirectory("${dependencies_fplbase_dir}" ${tmp_dir}/fplbase)
 endif()
 
 # Include motive.
