Update freetype, harfbuzz build settings.
- Add missing headers accounting harfbuzz & freetype update.

Tested: on OSX, built for Android.
PiperOrigin-RevId: 173209897
Change-Id: I711e43b9d03687d86404d40ad8e1b02d7e4e0b38

--- a/cmake/freetype/CMakeLists.txt
+++ b/cmake/freetype/CMakeLists.txt
@@ -56,6 +56,7 @@ set(libfreetype_SRCS
     ${freetype_dir}/src/base/ftsystem.c
     ${freetype_dir}/src/base/ftinit.c
     ${freetype_dir}/src/base/ftgasp.c
+    ${freetype_dir}/src/base/ftmm.c
     ${freetype_dir}/src/gzip/ftgzip.c
     ${freetype_dir}/src/raster/raster.c
     ${freetype_dir}/src/sfnt/sfnt.c
